[package]
name = "cosmoping"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
name = "cosmoping"
path = "src/bin/cosmoping.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0", optional = true }
dotenv = "0.15.0"
proptest = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
test-case = "3.3.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"


